examples/test/testpolicy6676.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6676
  namespace: namespace299
spec:
  podSelector:
    matchLabels:
      key30: value33
      key3: value44
      key4: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value33
          key30: value7
          key15: value44
      podSelector:
        matchLabels:
          key2: value5
          key14: value26
